--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eve",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "js/Event",
   "plugins": [
     "lotus-coffee"
@@ -8,5 +8,17 @@
   "scripts": {
     "build": "coffee-build -v 1.11.x -b -o js src",
     "postinstall": "npm run build"
+  },
+  "dependencies": {
+    "LazyVar": "aleclarson/LazyVar#2.2.0",
+    "Property": "aleclarson/Property#1.2.3",
+    "Type": "aleclarson/Type#2.3.0",
+    "assertType": "aleclarson/assertType#2.0.1",
+    "assertTypes": "aleclarson/assertTypes#2.0.1",
+    "emptyFunction": "aleclarson/emptyFunction#1.0.0",
+    "immediate": "aleclarson/immediate#4.1.1",
+    "isDev": "aleclarson/isDev#2.0.0",
+    "isType": "aleclarson/isType#1.0.1",
+    "sync": "aleclarson/sync#1.0.2"
   }
 }
