--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "immediate": "aleclarson/immediate#4.1.1",
     "isDev": "aleclarson/isDev#2.0.0",
     "isType": "aleclarson/isType#1.0.1",
+    "sliceArray": "aleclarson/sliceArray#1.0.0",
     "sync": "aleclarson/sync#1.0.2"
   }
 }
